edit summary field added

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -60,6 +60,10 @@
                                         ng-model="tool_description" ng-disabled="!tools_info_editable"></textarea>
                                     <label for="generalDescription">Description</label>
                                 </div>
+                                <div class="input-field">
+                                    <textarea id="generalEditSummary" class="validate materialize-textarea"></textarea>
+                                    <label for="generalEditSummary">Edit Summary</label>
+                                </div>
                                 <div class="input-field chips left-align"></div>
                             </form>
                         </div>
