--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -38,7 +38,7 @@
             <li id="toolsData">
                 <div class="collapsible-header">
                     <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">filter_drama</i>
+                    <i class="material-icons">settings</i>
                     Tools/Data<span class="new badge" data-badge-caption="found"
                         ng-bind="tools_search_tools_number"></span>
                 </div>
@@ -104,7 +104,7 @@
             <li id="workflows">
                 <div class="collapsible-header">
                     <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">place</i>
+                    <i class="material-icons">device_hub</i>
                     Workflows<span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number"></span>
                 </div>
                 <div class="collapsible-body">
