--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -348,13 +348,15 @@
                                         <tr>
                                             <td><input type="text" placeholder="name"></td>
                                             <td><input type="text" placeholder="description"></td>
-                                            <td class="switch">
-                                                <label>
-                                                    IN
-                                                    <input type="checkbox">
-                                                    <span class="lever"></span>
-                                                    OUT
-                                                </label>
+                                            <td>
+                                                <div class="switch">
+                                                    <label>
+                                                        IN
+                                                        <input type="checkbox" style="display:none">
+                                                        <span class="lever"></span>
+                                                        OUT
+                                                    </label>
+                                                </div>
                                             </td>
                                             <td>
                                                 <a class="waves-effect waves-light btn-small tooltipped green darken-1"
