update button on workflow variables added

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -399,6 +399,9 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <div class="right-align">
+                                <a class="waves-effect waves-light btn" style="margin:2px">Update</a>
+                            </div>
                         </div>
                     </div>
                 </li>
