add input output nodes to cytoscape

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -400,7 +400,7 @@
                                 </table>
                             </div>
                             <div class="right-align">
-                                <a class="waves-effect waves-light btn" style="margin:2px">Update</a>
+                                <a class="waves-effect waves-light btn" style="margin:2px" ng-click="workflow_step_input_output_update_pressed()">Update</a>
                             </div>
                         </div>
                     </div>
