create add_workflow backend function

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -251,12 +251,12 @@
                         <div class="row">
                             <form class="col s12">
                                 <div class="input-field">
-                                    <input id="workflowsGeneralWebsite" type="text" class="validate">
+                                    <input id="workflowsGeneralWebsite" type="text" class="validate" ng-model="workflow_website">
                                     <label for="workflowsGeneralWebsite">Website</label>
                                 </div>
                                 <div class="input-field">
                                     <textarea id="workflowsGeneralDescription"
-                                        class="validate materialize-textarea"></textarea>
+                                        class="validate materialize-textarea" ng-model="workflow_description"></textarea>
                                     <label for="workflowsGeneralDescription">Description</label>
                                 </div>
                                 <div class="input-field chips left-align"></div>
