experimental addition of workflow search jstree

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -240,7 +240,7 @@ LOGO FOOTER
 
 </div> <!-- angular controler -->
 
-<script type="text/javascript" src="/static/app/OBC.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" src="/static/app/OBC.js" charset="utf-8"></script>
 
 <script type="text/javascript" src="/static/app/materialize/js/materialize.min.js"></script>
 <script type="text/javascript" src="/static/app/konstantina/js/ui.js"></script>
