--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -142,6 +142,18 @@
                         <p>-----------------------------</p>
                         <p>-----------------------------</p>
                     </div>
+
+                    <div class="row left-align">
+                        <div class="col">
+                            <div js-tree="workflows_search_jstree_config" should-apply="tools_search_jstree_config_apply()"
+                                ng-model="workflows_search_jstree_model" tree="tools_search_jstree"
+                                tree-events="select_node:workflows_search_jstree_select_node"></div>
+                        </div>
+                    </div>
+
+
+
+
                 </div>
             </li>
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
