--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -134,7 +134,7 @@
                     </div>
 
 
-                    <!-- Tree list -->
+                    <!-- Tree list
                     <div class="row">
                         <p>-----------------------------</p>
                         <p>-----------------------------</p>
@@ -142,6 +142,7 @@
                         <p>-----------------------------</p>
                         <p>-----------------------------</p>
                     </div>
+                    -->
 
                     <div class="row left-align">
                         <div class="col">
