Work on #23. Download locally Materialize fonts

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -11,21 +11,24 @@
 	</script>
 
 	<script src="/static/app/jquery-3.3.1.min.js"></script>
+
 	<!--
 	<script src="/static/app/jquery-2.1.1/jquery-2.1.1.min.js"></script>
 	-->
 
 
-	<!-- Google Icon Font-->
+	<!-- Google Icon Font. REMOVED FROM HERE IN ORDER NOT TO RELY ON EXTERNAL RESOURCES
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	-->
+	<link rel="stylesheet" href="/static/app/material-design-icons-3.0.1/iconfont/material-icons.css">
 
-	<!-- Materialize Css-->
+	<!-- Materialize CSS-->
 	<link type="text/css" rel="stylesheet" href="/static/app/materialize/css/materialize.min.css" media="screen,projection" />
 
-	<!-- Animate Css FIXME: Add animate as external dependency-->
+	<!-- Animate CSS FIXME: Add animate as external dependency-->
 	<link rel="stylesheet" href="/static/app/konstantina/css/animate-v3.7.0.css">
 
-	<!-- Custom Css -->
+	<!-- Custom CSS -->
 	<link rel="stylesheet" href="/static/app/konstantina/css/style.css">	
 
 	<!-- FOR DRAGGABLE
