selectize and select2 are served locally #23

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -61,8 +61,12 @@
 	<script src="/static/app/angular.min.js"></script>
 	
 	<!-- For Select Perhaps we never use it!-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">    
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">  -->
+	<link rel="stylesheet" href="/static/app/select2-3.4.5/select2.css">
+
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css"> -->
+	<link rel="stylesheet" href="/static/app/selectize.js-0.8.5/dist/css/selectize.default.css">
+
 	<script src='/static/app/bower-angular-sanitize-1.7.2/angular-sanitize.min.js'></script>
 
 	<link rel="stylesheet" href="/static/app/ui-select-0.19.8/dist/select.min.css" type="text/css"/>
