edit summary on workflows general added

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -259,6 +259,10 @@
                                         class="validate materialize-textarea" ng-model="workflow_description" ng-disabled="!workflows_info_editable"></textarea>
                                     <label for="workflowsGeneralDescription">Description</label>
                                 </div>
+                                <div class="input-field">
+                                    <textarea id="workflowsGeneralEditSummary" class="validate materialize-textarea"></textarea>
+                                    <label for="workflowsGeneralEditSummary">Edit Summary</label>
+                                </div>
                                 <div class="input-field chips left-align"></div>
                             </form>
                         </div>
