--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -234,7 +234,7 @@
                         ng-show="workflows_info_editable"><i class="material-icons">save</i></a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Fork" ng-click="workflows_info_fork_pressed()" ng-show="!workflows_info_editable"
-                        ng-class="{'disabled': !username}"><i class="material-icons">device_hub</i></a>
+                        ng-class="{'disabled': !username}"><i class="material-icons">call_split</i></a>
                 </div>
             </div>
 
