--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -321,7 +321,7 @@
                                 <div class="row col s12">
                                     <div class="right-align">
                                         <a class="waves-effect waves-light btn" style="margin:2px">Cancel</a>
-                                        <a class="waves-effect waves-light btn" style="margin:2px" ng-show="workflows_info_editable">Delete</a>
+                                        <a class="waves-effect waves-light btn" style="margin:2px" ng-show="workflows_info_editable" ng-click="workflow_step_delete()">Delete</a>
                                         <a class="waves-effect waves-light btn" style="margin:2px"
                                             ng-click="workflow_step_add()" ng-show="workflows_info_editable">Add</a>
                                     </div>
