swap Vertical Position User<-->References

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -20,6 +20,7 @@
                         <span ng-show="tools_info_forked_from">, forked from <a href
                                 ng-click="tools_search_show_item(tools_info_forked_from)"><span
                                     ng-bind="tools_info_forked_from | tool_label"></span></a></span>
+                        <span>USED IN 86 WFs</span>
                     </small>
                 </p>
                 <!-- Buttons -->
